--- a/style.css
+++ b/style.css
@@ -18,9 +18,9 @@ body, html {
   height: 60px;
   background-color: inherit;
   display: grid;
-  grid-template-columns: 34% 64%;
+  grid-template-columns: 34% 65%;
   padding: 0 50px;
-  gap: 10px;
+  gap: 9px;
   z-index: 999;
   background-color: white;
 }
@@ -122,7 +122,7 @@ body, html {
 .right-btn {
   text-align: right;
   width: 100%;
-  height: 37px;
+  height: 35px;
 }
 
 .left-btn button {
@@ -317,7 +317,8 @@ body, html {
   width: 100%;
   display: flex;
   gap: 20px;
-  margin: 40px 0 0;
+  height: 100%;
+  align-items: end;
 }
 
 a {
@@ -373,7 +374,7 @@ a {
 .right-img {
   height: auto;
   width: 100%;
-  padding: 0 0 0 20px;
+  padding:0;
 }
 .right-section{
   display: block;
@@ -400,12 +401,13 @@ a {
   height: 100%;
   width: 100%;
   margin: 0 auto;
+  background-color: white;
 }
 
 .main-home p {
   font-size: 24px;
   font-weight: 700;
-  margin-top: 20px;
+ margin: 0 auto;
 }
 
 .main-home span {
@@ -417,13 +419,13 @@ a {
   flex-direction: row;
   width: 100%;
   height: auto;
-  gap: 50px;
+  gap: 70px;
 }
 .micropaywalpay{
   margin-top: 10px;
 }
 .micro-paypal-img{
-  height: 40px;
+  height: auto;
   width: 100%;
   object-fit: contain;
 }
@@ -439,8 +441,8 @@ a {
 .micro-paypal-imgMobi{
   display: flex;
   flex-direction: row;
-  height: 40px;
-  width: 100%;
+  height: 100%;
+  width: fit-content;
   margin: 0 auto;
   gap: 20px;
   padding: 3px 0;
@@ -457,7 +459,7 @@ a {
 
 .grid-container {
   max-width: 1300px;
-  margin: 10px auto;
+  margin: 0 auto;
   width: 100%;
   height: auto;
 }
@@ -488,7 +490,6 @@ a {
   height: 100%;
   width: 100%;
   gap: 38px;
-  margin-top: 20px;
   cursor: pointer;
 }
 
@@ -698,7 +699,7 @@ a {
   transition: transform 0.5s ease;
   height: 100%;
   width: 100%;
-  gap: 0px;
+  gap: 6px;
   cursor: pointer;
 }
 
@@ -1172,7 +1173,7 @@ a {
  max-width: 1300px;
  width: 100%;
  height: 100%;
- margin: 20px auto;
+ margin: 0px auto;
   background: linear-gradient(270deg, #fff -4.52%, #eae9e9 50.41%, #fff 102.11%);
 }
 
@@ -1526,32 +1527,33 @@ a {
   max-width: 1300px;
   position: relative;
   margin: 30px auto;
+  padding: 0 50px;
+ 
+}
+.carousle4{
+  overflow: hidden;
   width: 100%;
-  height: auto;
+  transition: transform 0.5s ease-in-out; 
+  display: flex;
 }
 
 .Reviews-container-main {
   display: flex;
   flex-direction: row;
-  width: 100%;
-  max-width: 1300px;
   margin: 0 auto;
+  gap: 20px;
+  transition: transform 0.5s ease-in-out; 
+  width: max-content;
 }
 
-.Reviews-container-main {
-  width: 100%;
-  margin: 0 auto;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  grid-auto-rows: 0.9fr;
-  grid-gap: 20px;
-}
+
 
 .Reviews-container-Grid {
-  min-width: calc(33.33%);
-  position: relative;
+  width: 271px;
+  padding: 10px 5px;
   display: flex;
   flex-direction: column;
+
 }
 
 .Reviews-containerImg {
@@ -1623,7 +1625,39 @@ a {
   line-height: 1;
 }
 
+.carouselRivew {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  gap: 10px;
+  bottom: 10px;
+  width: 100%;
+  margin-top: 10px;
+}
+.carousel-radio-buttons {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  margin-top: 15px;
+}
+.carousel-radio-buttons input[type="radio"] {
+  appearance: none;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  background-color: lightgray;
+  cursor: pointer;
+  border: 2px solid #0072bc;
+  transition: background-color 0.3s ease;
+}
 
+.carousel-radio-buttons input[type="radio"]:checked {
+  background-color: #0072bc;
+}
+
+.carousel-radio-buttonsNo{
+  display: none;
+}
 /* form-code */
 
 .formContainer {
@@ -1830,10 +1864,10 @@ a {
 .lsatSection {
   position: relative;
   width: 100%;
-  height: 390px;
+  height: auto;
   margin: 20px 0;
   display: grid;
-  grid-template-columns: 9% 68% 24%;
+  grid-template-columns: 10% calc(65% - 10px) 25%;
   gap: 40px;
   overflow: hidden;
 }
@@ -1852,15 +1886,15 @@ a {
 
 .lastParaDiv3 {
   width: 100%;
-  transform: translateX(-75px);
+  transform: translateX(-53px);
   background: #0072bc;
   border-radius: 10px;
 }
 
-.lastGridContainer {
-  position: absolute;
+.lastGridContainer{
+  min-width: 1300px;
   width: 100%;
-  height: 100%;
+  padding: 0 20px 0 0;
 }
 
 .lastGridContainerParaDiv {
@@ -1868,13 +1902,14 @@ a {
   max-width: 1300px;
   height: 100%;
   display: grid;
-  grid-template-columns: 48% 48%;
+  grid-template-columns: 32% 34%;
   gap: 60px;
   grid-gap: 85px;
+  padding: 20px 0;
 }
 
 .enquireContanierleft {
-  padding: 68px 10px 30px 200px;
+  padding: 20px 20px;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -1930,7 +1965,7 @@ a {
   border: 1px solid #48c355;
   border-radius: 4px;
   box-shadow: 0 0 5px 0 #48c35550;
-  padding: 12px 20px;
+  padding: 5px 10px;
   color: #fff;
 }
 
@@ -1950,22 +1985,25 @@ a {
 }
 
 .enquireContanierRight {
-    width: 500px;
-    height: 380px;
-    padding: 20px 20px 20px 0;
+    width: auto;
+    height: auto;
+    padding:  0;
 }
 
 .enquireImg {
+  position: relative;
   display: flex;
   flex-direction: column;
   width: 100%;
   height: 100%;
   object-fit: contain;
+  z-index: 1;
 }
 
 .enquireImg img {
   width: 100%;
   height: 100%;
+  object-fit: contain;
 }
 
 
@@ -2167,16 +2205,16 @@ a {
     grid-template-columns: 50% 46%;
   }
   .pfor-main-section{
-    font-size: 21px;
+    font-size: 25px;
   }
   .main-home{
-    padding: 0 50px;
+    padding: 30px 50px;
   }
   .grid-container{
     padding: 0 50px;
   }
   .grid-container2{
-    padding: 0 50px;
+    padding: 30px 50px;
   }
   .animation-section{
     padding: 0 50px;
@@ -2185,7 +2223,7 @@ a {
     padding: 10px 50px;
   }
   .ds_container{
-    padding: 0 50px;
+    padding: 30px 50px;
   }
   .gethierdAt{
     padding: 0 50px;
@@ -2212,14 +2250,14 @@ a {
 @media (max-width:1249px) {
   .main-section {
     height: auto;
-    gap: 19px;
+    gap: 20px;
     grid-template-columns: 54% 44%;
 }
 .carousel {
-  gap: 30px;
+  gap: 35px;
 }
 .lastGridContainerParaDiv{
-  grid-gap: 40px;
+  grid-gap: 49px;
 }
 .gethieredAt-contanier {
   grid-template-columns: 45% 46%;
@@ -2242,6 +2280,23 @@ a {
 .formConainerParaDiv {
   gap: 90px;
 }
+.Reviews-ParadivHeaderRight p{
+  font-size: 12px;
+}
+.Reviews-ParadivHeaderLeft p:nth-child(2){
+  font-size: 12px;
+}
+.Reviews-ParadivHeaderLeft{
+  font-size: 13px;
+}
+.cardEnd{
+    font-size: 11px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    line-height: 20px;
+    color: #454545;
+    padding: 0 10px;
+}
 }
 @media (max-width:1140px ) {
   .gethieredAt-contanier {
@@ -2258,10 +2313,10 @@ a {
   font-size: 35px;
 }
 .lastGridContainerParaDiv{
-  grid-template-columns: 48% 44%;
+  grid-template-columns: 32% 27%;
 }
 .enquireContanierleft {
-  padding: 30px 10px 0px 164px;
+  padding: 20px 20px;
 }
 .enquireChild2 {
   margin-top: 10px;
@@ -2282,24 +2337,44 @@ a {
 }
 .enquireBtnGreen{
   margin-right: 0;
+  padding: 12px 20px;
 }
 .lsatSection{
-  height: 300px;
+  height: auto;
+}
+.Reviews-container-main{
+  gap: 10px;
+}
+.Reviews-ParadivHeader{
+  padding: 0 10px;
 }
 .enquireContanierRight{
   height: 100%;
   width: auto;
-  height: 280px;
-  padding: 20px 0px 20px 0;
+  height: auto;
+  padding:  0;
 }
-.enquireImg{
-  width: 490px;
-  height: 100%;
+.project_section_innerBoxs {
+  gap: 72px;
 }
+
 .enquireImg img{
   height: 100%;
   width: 100%;
   object-fit: contain;
+}
+.Reviews-ParadivHeaderLeft{
+    font-size: 12px;
+
+}
+.Reviews-ParadivHeaderLeft p:nth-child(2) {
+  font-size: 10 px;
+}
+.Reviews-ParadivHeaderRight p {
+  font-size: 10px;
+}
+.cardEnd{
+  line-height: 18px;
 }
 
 }
@@ -2314,7 +2389,10 @@ a {
   font-size: 17px;
 }
 .carousel {
-  gap: 20px;
+  gap: 28px;
+}
+.card2 {
+  min-width: calc(33.2%);
 }
 .h5tags h5 {
   font-size: 15px;
@@ -2430,10 +2508,10 @@ a {
   grid-gap: 25px;
 }
 .lastGridContainerParaDiv {
-  grid-template-columns: 46% 46%;
+  grid-template-columns: 26% 26%;
 }
 .enquireContanierleft {
-  padding: 30px 10px 30px 146px;
+  padding:0px 20px;
   width: 100%;
   height: auto;
 }
@@ -2451,6 +2529,9 @@ a {
   .main-section {
     gap: 10px;
     grid-template-columns: 55% 44%;
+}
+.carousel {
+  gap: 25px;
 }
 .p-tag-top {
   font-size: 22px;
@@ -2506,7 +2587,7 @@ a {
   font-size: 30px;
 }
 .project_section_innerBoxs {
-  gap: 60px;
+  gap: 65px;
   margin: 25px 5px 40px 60px;
 }
 .enquireImg {
@@ -2552,7 +2633,7 @@ a {
   gap: 63px;
 }
 .enquireContanierleft {
-  padding: 25px 10px 0px 130px;
+  padding: 0 20px;
 }
 .enquireChild2 p{
   margin: 10px 0;
@@ -2563,6 +2644,9 @@ a {
 }
 .lsatSection {
   height: 280px;
+}
+.lastGridContainerParaDiv {
+  grid-template-columns: 24% 24%;
 }
 
 
@@ -2728,7 +2812,7 @@ a {
   align-items: center;
 }
 .project_section_innerBoxs {
-  gap: 54px;
+  gap: 58px;
 }
 .gethieredAt-contanier {
   gap: 53px;
@@ -2771,10 +2855,10 @@ a {
   height: 60px;
 }
 .lsatSection{
-  height: 300px;
+  height: auto;
 }
 .enquireContanierleft {
-  padding: 15px 10px 30px 124px;
+  padding: 0 10px;
 }
 .enquireChild2 span{
   font-size: 15px;
@@ -2799,13 +2883,16 @@ a {
 margin-top: 10px;
 }
 .enquireImg {
-  width: 320px;
+  width: auto;
   height: auto;
 }
+.lastGridContainerParaDiv {
+  grid-template-columns: 21% 21%;
+}
 .enquireContanierRight {
-  width: 500px;
-  height: 300px;
-  padding: 20px 20px 20px 0;
+  width: auto;
+  height: auto;
+  padding: 0;
 }
 .lastGridContainerParaDiv {
   grid-gap: 10px;
@@ -2818,6 +2905,24 @@ margin-top: 10px;
   height: 60px;
   padding: 0;
 }
+.Reviews-container-Grid {
+  width: 244px;
+  padding: 10px 5px;
+
+}
+.Reviews-ParadivHeaderLeft{
+  font-size: 12px;
+}
+.Reviews-ParadivHeader p:nth-child(2){
+  font-size: 12px;
+}
+.Reviews-ParadivHeaderRight{
+  font-size: 10px;
+}
+.cardEnd{
+  font-size: 11px;
+}
+
 }
 @media (max-width:746px) {
   .main-section {
@@ -2853,7 +2958,7 @@ margin-top: 10px;
   font-size: 17px;
 }
 .carousel {
-  gap: 15px;
+  gap: 19px;
 }
 .h5tags {
   height: 40px;
@@ -3013,8 +3118,14 @@ margin-top: 10px;
   margin: 5px auto;
 }
 .enquireContanierleft {
-  padding: 15px 10px 30px 103px;
+  padding: 0 10px;
 }
+.lastGridContainerParaDiv {
+  grid-gap: 5px;
+  grid-template-columns: 18% 18%;
+  padding: 10px 0;
+}
+
 .enquireChild1 p {
   font-size: 18px;
 }
@@ -3034,14 +3145,14 @@ margin-top: 10px;
   padding: 12px 10px;
 }
 .lsatSection {
-  height: 225px;
+  height: auto;
 }
 .enquireContanierRight {
-  height: 225px;
-  padding: 10px 20px 10px 0;
+  height: auto;
+  padding: 0;
 }
 .enquireImg {
-  width: 290px;
+  width: auto;
   height: 100%;
 }
 .enquireImg img {
@@ -3158,6 +3269,8 @@ font-size: 12px;
 }
 .micro-paypal-imgNo{
   display: block;
+  height: 50px;
+  width: fit-content;
 }
 .card {
   min-width: calc(50%);
@@ -3282,13 +3395,15 @@ font-size: 12px;
   margin: 0 auto;
   display: flex;
   grid-gap: 2px;
-  overflow-x: auto;
+  overflow-x: hidden;
+  transition: transform 0.5s ease;
 
 }
 .carousel-controls3 label {
   cursor: pointer;
 }
 .Reviews-container-Grid {
+  width: 100%;
   min-width: 224px;
   padding: 10px 10px;
   position: relative;
@@ -3334,19 +3449,23 @@ font-size: 12px;
   gap: 5px;
 }
 .lastGridContainerParaDiv{
-  padding: 0 50px;
+  padding: 0 20px;
+}
+.lastGridContainer {
+  min-width: 319px;
+
 }
 .lastGridContainerParaDiv {
   grid-template-columns: 100%;
 }
 .enquireContanierleft {
-  padding: 15px 10px 30px 46px;
+  padding: 10px 0px;
 }
 .enquireContanierRight {
   display: none;
 }
 .enquireChild2 p{
-  padding-right: 125px;
+  padding-right: 0;
 }
 .footerContanier {
   grid-template-columns: 100%;
@@ -3383,6 +3502,9 @@ font-size: 12px;
 }
 .enquireChild2 p {
   padding-right: 100px;
+}
+.micro-paypal-imgNo {
+  height: 45px;
 }
 }
 
@@ -3544,7 +3666,7 @@ font-size: 12px;
   padding: 0 20px;
 }
 .enquireContanierleft {
-  padding: 15px 15px 5px 25px;
+  padding: 10px 0;
 }
 .enquireChild2 p {
   padding-right: 5px;
@@ -3577,6 +3699,12 @@ font-size: 12px;
 }
 .footerPhone a {
   font-size: 15px;
+}
+.lastGridContainer {
+  min-width: 222px;
+}
+.lastGridContainerParaDiv {
+  padding: 0;
 }
 }
 
@@ -3635,19 +3763,24 @@ font-size: 12px;
     width: 100%;
 }
 
-}
 .right-btn button{
   font-size: 13px;
   padding: 8px 8px;
 
 }
+.carousel-radio-buttonsNo{
+  display: unset;
+}
+}
+
+
 
 @media (max-width:743px) {
   .links-container {
     font-size: 12px;
 }
 .logo {
-  width: 90px;
+  width: 130px;
 }
 .left-btn {
   width: 60px;
